Fix alignment of Jump to a Family menu.
Before, this menu was bumped in a bit from the right. Now its right
edge is aligned with the other menus.

--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -79,6 +79,11 @@ $disabled_orange_gradient: linear-gradient(
         }
     }
 
+    #jump-nav {
+        margin: 0 auto;
+        max-width: 330px;
+    }
+
     .groupbox {
         position: relative;
         ul {
